<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">GreenDev</string>
    <string name="title">Casa Terracota</string>
    <string name="about">Acerca de:</string>
    <string name="description">Casa habitable hecha completamente de barro. Una joya de arquitectura. Unica en el mundo. El arquitecto ha ganado varios premios por esta creacion que lleva 13 años en construccion y la siguen mejorando.</string>
    <string name="schedule">Horario de \n visita:</string>
    <string name="schedule_description">De 10:00 AM a 05:00 PM</string>
    <string name="temperature_description">10°C a 22°C</string>
    <string name="temperature">Temperatura:</string>
    <string name="location">Ubicación:</string>
    <string name="location_description">Villa de Leyva - Boyaca</string>
    <string name="title2" tools:ignore="MissingTranslation">Puente Boyaca</string>
    <string name="titlec">Parque Nacional Natural El Cocuy</string>
    <string name="descriptionc">Este  parque es   una de las  reservas hidrográficas más importantes de Colombia, sus alrededores  demuestran la biodiversidad que caracteriza nuestro país, desde sus cascadas y lagunas, hasta su vasta vegetación como lo es el páramo y el frailejón.</string>
    <string name="temperature_descriptionc">-4°C a 20°C</string>
    <string name="location_descriptionc">Limita con  Boyacá y Arauca</string>
    <string name="shedule_descriptionc">De 06:00 AM a 05:00 PM</string>
</resources>